tests/parser/bad/lib/lmodule-library-cid-let-id-eq-with.scillib
library TestLib

(* can't assign types to variables *)
let a = Map
